fixed user visiblew and not visible

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,7 +67,7 @@ a {
 
 .favouritesDiv {
 	display: flex;
-	justify-content: flex-end;
+	justify-content: space-between;
 	padding: 0 2rem;
 	text-decoration: none;
 }
@@ -77,6 +77,11 @@ a {
 }
 
 .favouritesDivLink {
+	background-color: #000000;
+	color: #ffffff;
+	padding: 0.7rem;
+}
+.favouritesDiv a {
 	background-color: #000000;
 	color: #ffffff;
 	padding: 0.7rem;
@@ -97,7 +102,7 @@ a {
 	background-color: #000000;
 	color: #ffffff;
 	padding: 0.7rem;
-	margin-bottom: 3rem;
+	margin: 3rem auto -1rem auto;
 }
 
 .compareButton:hover {
@@ -137,6 +142,13 @@ a {
   height: 2rem;
   align-items: center;
   justify-content: center;
+}
+
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 @media (prefers-color-scheme: dark) {
